tests/NormalTests/paczka1/fuzzy1/81232482.err
Error in line 5: 1BLkpIt S426 92,1
Error in line 23: S426 A258 50,7
Error in line 29: wQPgBS A258 94,03
Error in line 22: 6F89DM6f A850 95,7
